--- a/aboutme.html
+++ b/aboutme.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 </head>
-<body>
+<body style="background-color: aqua;">
     <nav class="navbar navbar-expand-sm bg-light">
         <!-- Links -->
         <ul class="navbar-nav">
@@ -25,7 +25,31 @@
           </li>
         </ul>
       </nav> 
-   
+
+      <div class="container">
+        <div class="row">
+            <h1 class="text-center">About me:</h1>
+        </div>
+    
+        <div class="row">
+        <div class="card col-6 p-0" style="background-color: lightgrey;">
+          <img class="card-img-top" src ="Forrest Resume Photo.jpg" width="500" height="600" style="border:0;"/>
+          <div class="card-body text-center">
+          <p>Contact me at: 231-360-8083</p>
+          <p>fsverellen@gmail.com</p>
+          <a href="https://www.linkedin.com/in/forrest-verellen">LinkedIn</a>
+        </div>
+        </div>
+
+        <div class="card col-4 p-0" style="background-color: lightgrey;">
+            <div class="card-body text-center" style="background-color: lightgray;">
+              I have held many tiles. Some I am proud of, some I am not. These include: Eagle Scout, former Varsity Cross Country & Track Runner, former President of Grand Valley State University Running Club, former Park Ranger at Grand Canyon National Park, former ESL Teacher in Czech Republic, hobbiest bartender, failed insurance agent, amateur gamer and aspiring web developer. I am a motivated and dedicated worker looking for a position effective starting as soon as possible. I am prepared to utilize my customer service skills as well as my attention to detail and multi-tasking skills in order to become a valuable member of any working team. As my experience illustrates, I can work both independently and as part of a team. My experience is primarily in administration/sales/education; however, my attributes are blossoming.
+        </div>
+        </div>
+<div>
+    <p>Created by Forrest Verellen for Grand Circus' C#.net full stack bootcamp (July 2023)</p>
+  </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 </body>
 </html>
