--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 </head>
-<body>
+<body style="background-color: aqua;">
     <nav class="navbar navbar-expand-sm bg-light">
         <!-- Links -->
         <ul class="navbar-nav">
@@ -25,6 +25,51 @@
           </li>
         </ul>
       </nav> 
+
+      <div class="container">
+        <div class="row">
+            <h1 class="text-center">My Portfolio</h1>
+            <h2 class="text-center">Check out some of my projects:</h2>
+        </div>
+        <div>
+          <table class="table table-light table-striped">
+            <thead>
+              <tr>
+              <th scope="col">Project</th>
+              <th scope="col">Description</th>
+            </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>
+          <a href="https://github.com/shaggyfdoggg/Unit-4-Lab-2">Movie Search Engine Example</a>
+        </td>
+        <td>
+          Imitates a movie search engine. Type in a genre, find a movie. 
+        </td>
+        </tr>
+        <tr>
+          <td>
+          <a href="https://github.com/shaggyfdoggg/Unit-3-Lab-3">Dice Rolling Simulation</a>
+        </td>
+          <td>
+            Runs the user through dice rolling prompts using a 6-sided-die and a 20-sided-die. You can also play craps and Dungeons and Dragons with this project. 
+          </td>
+        </tr>
+        <tr>
+          <td>
+          <a href="https://github.com/MariaRagone/Library-Project-Group-3">Library Demonstration</a>
+        </td>
+        <td>
+          This project demonstrates a library simulation. The user can find, check-out, and return a book. 
+        </td>
+        </tr>
+        </tbody>
+        </table>
+      </div>
+<div>
+      <p>Created by Forrest Verellen for Grand Circus' C#.net full stack bootcamp (July 2023)</p>
+    </div>
    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script> 
 </body>
